--- a/Contact.html
+++ b/Contact.html
@@ -19,15 +19,15 @@
             <div class="menu2">
                 <div class="menucon2">
                     <img src="images/interface (1).png" alt="">
-                    <a href="">Home</a>
+                    <a href="website.html">Home</a>
                 </div>
                 <div class="menucon2">
                     <img src="images/smartphone.png" alt="">
-                    <a href="">News</a>
+                    <a href="News.html">News</a>
                 </div>
                 <div class="menucon2">
                     <img src="images/contact-mail.png" alt="">
-                    <a href="">Contact</a>
+                    <a href="Contact.html">Contact</a>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
         <!-- Card -->
         <div class="cardtong">
             <div class="imgg">
-                <img src="images/slidercuoi.jpg" alt="">
+                <img src="https://img.freepik.com/premium-photo/woman-with-purple-hair-wearing-sunglasses-headphones_379823-24597.jpg?w=740" alt="">
             </div>
             <div class="formm">
                 <form style="padding: 20px;">
