--- a/website.html
+++ b/website.html
@@ -63,63 +63,50 @@
             <p>Highlighted Project</p>
         </div>
         <!-- Card -->
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-10">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-10">
             <div class="col">
                 <div class="card" style="background-color: black; margin-top: 3%;">
                     <img src="images/card.png" alt="" class="card-img-top">
-                    <div class="card-text">Platformer Toolkit is an interactive video essay where you can learn </div>
+                    <div class="card-text">The fair provides a platform for startups to pitch their ideas to potential investors and partners. The “Startup Pitch” competition, a key event of the fair, offers young entrepreneurs the chance to showcase their projects and receive valuable feedback from a panel of judges.</div>
                     <button class="btnw">Watch</button>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="background-color: black; margin-top: 3%;">
                     <img src="images/card.png" alt="" class="card-img-top">
-                    <div class="card-text">Platformer Toolkit is an interactive video essay where you can learn </div>
+                    <div class="card-text">The fair provides a platform for startups to pitch their ideas to potential investors and partners. The “Startup Pitch” competition, a key event of the fair, offers young entrepreneurs the chance to showcase their projects and receive valuable feedback from a panel of judges.</div>
                     <button class="btnw">Watch</button>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="background-color: black; margin-top: 3%;">
                     <img src="images/card.png" alt="" class="card-img-top">
-                    <div class="card-text">Platformer Toolkit is an interactive video essay where you can learn </div>
+                    <div class="card-text">The fair provides a platform for startups to pitch their ideas to potential investors and partners. The “Startup Pitch” competition, a key event of the fair, offers young entrepreneurs the chance to showcase their projects and receive valuable feedback from a panel of judges.</div>
                     <button class="btnw">Watch</button>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="background-color: black; margin-top: 3%;">
-                    <img src="images/card.png" alt="" class="card-img-top">
-                    <div class="card-text">Platformer Toolkit is an interactive video essay where you can learn </div>
+                    <img src="https://img.freepik.com/premium-photo/girl-wearing-ar-glasses_553012-17707.jpg?w=360" alt="" class="card-img-top">
+                    <div class="card-text">The fair provides a platform for startups to pitch their ideas to potential investors and partners. The “Startup Pitch” competition, a key event of the fair, offers young entrepreneurs the chance to showcase their projects and receive valuable feedback from a panel of judges.</div>
                     <button class="btnw">Watch</button>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="background-color: black; margin-top: 3%;">
-                    <img src="images/card.png" alt="" class="card-img-top">
-                    <div class="card-text">Platformer Toolkit is an interactive video essay where you can learn </div>
+                    <img src="https://img.freepik.com/premium-photo/girl-wearing-ar-glasses_553012-17707.jpg?w=360" alt="" class="card-img-top">
+                    <div class="card-text">The fair provides a platform for startups to pitch their ideas to potential investors and partners. The “Startup Pitch” competition, a key event of the fair, offers young entrepreneurs the chance to showcase their projects and receive valuable feedback from a panel of judges.</div>
                     <button class="btnw">Watch</button>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="background-color: black; margin-top: 3%;">
-                    <img src="images/card.png" alt="" class="card-img-top">
-                    <div class="card-text">Platformer Toolkit is an interactive video essay where you can learn </div>
+                    <img src="https://img.freepik.com/premium-photo/girl-wearing-ar-glasses_553012-17707.jpg?w=360" alt="" class="card-img-top">
+                    <div class="card-text">The fair provides a platform for startups to pitch their ideas to potential investors and partners. The “Startup Pitch” competition, a key event of the fair, offers young entrepreneurs the chance to showcase their projects and receive valuable feedback from a panel of judges.</div>
                     <button class="btnw">Watch</button>
                 </div>
             </div>
-            <div class="col">
-                <div class="card" style="background-color: black; margin-top: 3%;">
-                    <img src="images/card.png" alt="" class="card-img-top">
-                    <div class="card-text">Platformer Toolkit is an interactive video essay where you can learn </div>
-                    <button class="btnw">Watch</button>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card" style="background-color: black; margin-top: 3%;">
-                    <img src="images/card.png" alt="" class="card-img-top">
-                    <div class="card-text">Platformer Toolkit is an interactive video essay where you can learn </div>
-                    <button class="btnw">Watch</button>
-                </div>
-            </div>
+
         </div>
         <!-- slider cuoi -->
          <img src="images/slc.png" alt="" class="slidercuoi">
